--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,4 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&family=VT323&display=swap');
+@mixin flex-column-center {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
-$text-font: 'Poppins', sans-serif;
-$bg-color: #3d4447;
+.flex-column-center {
+  @include flex-column-center;
+}
