--- a/src/components/LogoDrumMachine/style.scss
+++ b/src/components/LogoDrumMachine/style.scss
@@ -3,22 +3,64 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    margin-bottom: 10px;
     width: 78%;
-  }
-  &-inner {
-  }
-  &-icon {
-    &:nth-child(1) {
-      color: #ff6f91;
-    }
+    height: 0;
+    opacity: 0;
+    transition: all 0.6s linear 0.2s;
 
-    &:nth-child(2) {
-      color: #ffc75f;
-    }
+    &.active {
+      height: 150px;
+      position: relative;
+      opacity: 1;
+      transition: all 0.5s linear 0.2s;
 
-    &:nth-child(3) {
-      color: #ff9671;
+      transform: rotate(180deg);
+
+      .bar-music {
+        position: absolute;
+        width: 10%;
+        // height: 10%;
+        background: #5ffbf1;
+        border-radius: 50px;
+      }
+      .one {
+        left: 15%;
+        background: #ff6f91;
+        top: 30%;
+        animation: music 1s ease infinite alternate;
+      }
+      .two {
+        background-color: #ffc75f;
+        left: 30%;
+        top: 30%;
+        animation: music 1.3s ease infinite alternate;
+      }
+      .three {
+        left: 45%;
+        background-color: #f9f871;
+        top: 30%;
+        animation: music 1.6s ease infinite alternate;
+      }
+      .four {
+        background-color: #cd113b;
+        left: 60%;
+        top: 30%;
+        animation: music 1.9s ease infinite alternate;
+      }
+      .five {
+        background-color: #7dedff;
+        left: 75%;
+        top: 30%;
+        animation: music 2.2s ease infinite alternate;
+      }
+      @keyframes music {
+        0% {
+          height: 10%;
+        }
+        100% {
+          height: 40%;
+        }
+      }
     }
   }
 }
